--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content=" AFRICAN JUNGLE Club is an exclusive collection of 4.444 uniquely
+    <meta
+      name="description"
+      content=" AFRICAN JUNGLE CLUB is an exclusive collection of 4.444 uniquely
     created NFT collectibles of the wakanda civilization, also known
-    as Visionnaries of Africa.">
+    as Visionnaries of Africa."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="/./assets/images/africanjungle1.png"/>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="/./assets/images/africanjungle1.png"
+    />
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -49,7 +56,7 @@
                 Jungle
               </div>
               <div class="desc">
-                AFRICAN JUNGLE Club is an exclusive collection of 4.444 uniquely
+                AFRICAN JUNGLE CLUB is an exclusive collection of 4.444 uniquely
                 created NFT collectibles of the wakanda civilization, also known
                 as Visionnaries of Africa.
               </div>
@@ -163,7 +170,7 @@
             <div class="step">Step:</div>
             <div class="counter">02</div>
             <div class="desc">
-              Animals are release. Get Yours AfricanjungleClub NFT on Public
+              Animals are release. Get Yours African jungle CLUB NFT on Public
               Sale.
             </div>
             <img
@@ -222,217 +229,207 @@
           </div>
         </div>
       </section>
-      <br>
+      <br />
       <section class="description">
         <section class="content_des">
-            <div class="titre-grand">
-                <p> FACTS ABOUT
-                    AFRICAN JUNGLE CLUB
-                </p>
-                <hr>
-            </div>
-            <div class="titre-petit">
+          <div class="titre-grand">
+            <p>FACTS ABOUT AFRICAN JUNGLE CLUB</p>
+            <hr />
+          </div>
+          <div class="titre-petit">
+            <p>EXCLUSIVITY</p>
+          </div>
 
-                <p>EXCLUSIVITY </p>
-            </div>
-
-            <div class="sub">
-                <p> AFRICAN JUNGLE Club is an exclusive collection of 4,444 unique ERC-721 NFT's. Issued on a smart
-                    contract
-                    on the Ethereum Blockchain. There will be only this original collection.
-                </p>
-            </div>
+          <div class="sub">
+            <p>
+              AFRICAN JUNGLE CLUB is an exclusive collection of 4,444 unique
+              ERC-721 NFT's. Issued on a smart contract on the Ethereum
+              Blockchain. There will be only this original collection.
+            </p>
+          </div>
         </section>
         <section class="content_des">
-            <div class="titre-petit">
-                <p>FAIRNESS </p>
+          <div class="titre-petit">
+            <p>FAIRNESS</p>
+          </div>
 
-            </div>
-
-            <div class="sub">
-                <p>
-                    Fair launch, fair price: 0.05 ETH for every AFRICAN JUNGLE NFT
-                </p>
-            </div>
+          <div class="sub">
+            <p>
+              Fair launch, fair price: 0.05 ETH for every AFRICAN JUNGLE NFT
+            </p>
+          </div>
         </section>
-        <br>
-        <br>
+        <br />
+        <br />
         <section class="content_des">
-
-            <div class="titre-grand" style="padding-left: 50px; display: flex; justify-content: center;">
-                <div>
-                    <p> MISSION CONTROL
-                    </p>
-                    <hr>
+          <div
+            class="titre-grand"
+            style="padding-left: 50px; display: flex; justify-content: center"
+          >
+            <div>
+              <p>MISSION CONTROL</p>
+              <hr />
+            </div>
+          </div>
+          <br />
+          <div class="container-team">
+            <div class="profile-card">
+              <div class="img">
+                <img src="assets/images/1.jpeg" />
+              </div>
+              <div class="caption">
+                <div class="des-team">
+                  <h3>Boris</h3>
+                  <p>-</p>
                 </div>
-            </div>
-            <br>
-            <div class="container-team">
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="assets/images/1.jpeg">
-                    </div>
-                    <div class="caption">
-                        <div class="des-team">
-                            <h3>Boris</h3>
-                            <p>-</p>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="bx bxl-twitter"></i></a>
-                            <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-
-                        </div>
-                    </div>
+                <div class="social-links">
+                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                  <a href="#"><i class="bx bxl-instagram-alt"></i></a>
                 </div>
+              </div>
+            </div>
 
-
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="assets/images/1.jpeg">
-                    </div>
-                    <div class="caption">
-                        <div class="des-team">
-                            <h3>Boris</h3>
-                            <p>-</p>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="bx bxl-twitter"></i></a>
-                            <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-
-                        </div>
-                    </div>
+            <div class="profile-card">
+              <div class="img">
+                <img src="assets/images/1.jpeg" />
+              </div>
+              <div class="caption">
+                <div class="des-team">
+                  <h3>Boris</h3>
+                  <p>-</p>
                 </div>
-
-
-                <div class="profile-card">
-                    <div class="img">
-                        <img src="assets/images/1.jpeg">
-                    </div>
-                    <div class="caption">
-                        <div class="des-team">
-                            <h3>Hubert</h3>
-                            <p>DEVELOPMENT</p>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="bx bxl-twitter"></i></a>
-                            <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-
-                        </div>
-                    </div>
+                <div class="social-links">
+                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                  <a href="#"><i class="bx bxl-instagram-alt"></i></a>
                 </div>
-
-
+              </div>
             </div>
 
+            <div class="profile-card">
+              <div class="img">
+                <img src="assets/images/1.jpeg" />
+              </div>
+              <div class="caption">
+                <div class="des-team">
+                  <h3>Hubert</h3>
+                  <p>DEVELOPMENT</p>
+                </div>
+                <div class="social-links">
+                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                  <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
-        <br>
-        <br>
-        <br>
+        <br />
+        <br />
+        <br />
         <section class="content_des">
-            <div class="titre-grand">
-                <p>FAQ </p>
-                <hr>
-            </div>
-            <div class="titre-petit">
-                <p>
-                    • WHAT IS AFRICAN JUNGLE Club? </p>
-            </div>
+          <div class="titre-grand">
+            <p>FAQ</p>
+            <hr />
+          </div>
+          <div class="titre-petit">
+            <p>• WHAT IS AFRICAN JUNGLE CLUB?</p>
+          </div>
 
-            <div class="sub">
-                <p>
-                    A limited Non-Fungible ERC-721 Token collection of 4.444 exclusive AFRICAN JUNGLE NFT. Handdrawn
-                    art
-                    pieces minted on the Ethereum blockchain.
-                </p>
-            </div>
+          <div class="sub">
+            <p>
+              A limited Non-Fungible ERC-721 Token collection of 4.444 exclusive
+              AFRICAN JUNGLE NFT. Handdrawn art pieces minted on the Ethereum
+              blockchain.
+            </p>
+          </div>
         </section>
         <section class="content_des">
-            <div class="titre-petit">
-                <p> • HOW DO I PURCHASE AN AFRICAN JUNGLE NFT? </p>
-            </div>
-            <div class="sub">
-                <p>
-
-                    You can purchase your own AFRICAN JUNGLE on this website through the initial sale. 440 will be
-                    available through a pre-sale for supporting community members. At the moment of adoption, a
-                    random
-                    AFRICAN JUNGLE will be minted to you on the blockchain, and transferred to your wallet and
-                    OpenSea
-                    account.
-                </p>
-            </div>
+          <div class="titre-petit">
+            <p>• HOW DO I PURCHASE AN AFRICAN JUNGLE NFT?</p>
+          </div>
+          <div class="sub">
+            <p>
+              You can purchase your own AFRICAN JUNGLE on this website through
+              the initial sale. 440 will be available through a pre-sale for
+              supporting community members. At the moment of adoption, a random
+              AFRICAN JUNGLE will be minted to you on the blockchain, and
+              transferred to your wallet and OpenSea account.
+            </p>
+          </div>
         </section>
         <section class="content_des">
-            <div class="titre-petit">
-                <p> • WHEN DOES THE SALE START? </p>
-            </div>
-            <div class="sub">
-                <p>
-                    The Sale will start on December 2021, The 27th at 00h
-                </p>
-            </div>
+          <div class="titre-petit">
+            <p>• WHEN DOES THE SALE START?</p>
+          </div>
+          <div class="sub">
+            <p>The Sale will start on December 2021, The 27th at 00h</p>
+          </div>
         </section>
         <section class="content_des">
-            <div class="titre-petit">
-                <p> • HOW MUCH DOES AN AN AFRICAN JUNGLE COST? </p>
-            </div>
-            <div class="sub">
-                <p>
-                    One AFRICAN JUNGLE NFT can be purchased by the price of 0.05ETH.
-                </p>
-            </div>
+          <div class="titre-petit">
+            <p>• HOW MUCH DOES AN AN AFRICAN JUNGLE COST?</p>
+          </div>
+          <div class="sub">
+            <p>
+              One AFRICAN JUNGLE NFT can be purchased by the price of 0.05ETH.
+            </p>
+          </div>
         </section>
         <section class="content_des">
-            <div class="titre-petit">
-                <p> •  SO WHAT DOES IT NEED TO BUY ONE? </p>
-            </div>
-            <div class="sub">
-                <p>
-                    You need to install the "Metamask" extension for Google Chrome. Once installed, get your
-                    Ethereum
-                    currency (ETH) on an exchange like Binance, Coinbase or PayPal. Send some to your Public Wallet
-                    Address and you are almost there. Now you just have to connect your Metamask to the African
-                    Legacy
-                    Club
-                    website by clicking the icon in the top-right of the browser. Hit the Mint button, approve the
-                    transaction and proudly claim to have a AFRICAN JUNGLE Club NFT.
-                </p>
-            </div>
+          <div class="titre-petit">
+            <p>•  SO WHAT DOES IT NEED TO BUY ONE?</p>
+          </div>
+          <div class="sub">
+            <p>
+              You need to install the "Metamask" extension for Google Chrome.
+              Once installed, get your Ethereum currency (ETH) on an exchange
+              like Binance, Coinbase or PayPal. Send some to your Public Wallet
+              Address and you are almost there. Now you just have to connect
+              your Metamask to the AFRICAN JUNGLE CLUB website by clicking the
+              icon in the top-right of the browser. Hit the Mint button, approve
+              the transaction and proudly claim to have a AFRICAN JUNGLE CLUB
+              NFT.
+            </p>
+          </div>
         </section>
         <section class="content_des">
-            <div class="titre-petit">
-                <p> •  ARE THERE RARE AFRICAN JUNGLE? </p>
-            </div>
-            <div class="sub">
-                <p>
-                    They are all rare, especially due to the fact that they came from differents country from the
-                    Kingdom of Wakanda.
-                </p>
-            </div>
+          <div class="titre-petit">
+            <p>•  ARE THERE RARE AFRICAN JUNGLE?</p>
+          </div>
+          <div class="sub">
+            <p>
+              They are all rare, especially due to the fact that they came from
+              differents country from the Kingdom of Wakanda.
+            </p>
+          </div>
         </section>
-        <br><br>
+        <br /><br />
         <section class="content_des footer">
-            <section class="navbar footer-item">
-                <div style="font-size: 15px;">
-                    <a href="">
-                        <p style="color: white;
+          <section class="navbar footer-item">
+            <div style="font-size: 15px">
+              <a href="">
+                <p
+                  style="
+                    color: white;
                     font-weight: 600;
                     margin: 0;
-                    text-align: center;">Terms
-                            © 2022</p>
-                    </a>
-                    <br /><a href="#about" class="logo" style="font-size: 25px;">AFRICAN<span>LEGACY
-                            CLUB.</span></a>
-
-                </div>
-                <div class="link-items">
-                  <a href=""><i class="bx bxl-instagram"></i></a>
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-discord-alt"></i></a>
-                </div>
-            </section>
+                    text-align: center;
+                  "
+                >
+                  Terms © 2022
+                </p>
+              </a>
+              <br /><a href="#about" class="logo" style="font-size: 25px"
+                >AFRICAN<span>LEGACY CLUB.</span></a
+              >
+            </div>
+            <div class="link-items">
+              <a href=""><i class="bx bxl-instagram"></i></a>
+              <a href=""><i class="bx bxl-twitter"></i></a>
+              <a href=""><i class="bx bxl-discord-alt"></i></a>
+            </div>
+          </section>
         </section>
-    </section>
+      </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.3.5/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
